changed email address

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<div id="header">
 			<p id="name">Deborah Chasteen</p>
-			<a href="mailto:you@yourdomain.com"><p id="email">debchasteen@gmail.com</p> <A:link { COLOR: black; TEXT-DECORATION: none; font-weight: normal }
+			<a href="mailto:you@yourdomain.com"><p id="email">debchasteen@uga.edu</p> <A:link { COLOR: black; TEXT-DECORATION: none; font-weight: normal }
 A:visited { COLOR: #570000; TEXT-DECORATION: none; font-weight: normal }
 A:active { COLOR: black; TEXT-DECORATION: none }
 A:hover { COLOR: blue; TEXT-DECORATION: none; font-weight: none }>
