--- a/index.html
+++ b/index.html
@@ -1,41 +1,44 @@
-
 <!DOCTYPE html>
 <html>
 	<head>
-		<link type="text/css" rel="stylesheet" href="mystyle.css"/>
+		<link type="text/css" rel="stylesheet" href="my style.css"/>
 		<title></title>
 	</head>
 	<body>
 		<div id="header">
 			<p id="name">Deborah Chasteen</p>
-			<a href="mailto:you@yourdomain.com"><p id="email">debchasteen@uga.edu</p> <A:link { COLOR: black; TEXT-DECORATION: none; font-weight: normal }
-A:visited { COLOR: #570000; TEXT-DECORATION: none; font-weight: normal }
-A:active { COLOR: black; TEXT-DECORATION: none }
-A:hover { COLOR: blue; TEXT-DECORATION: none; font-weight: none }>
-
--->
-</style></p></a>
+			<p id="email"> <a href="mailto:debchasteen@gmail.com">debchasteen@gmail.com</p></a> 
 		</div>
-		<div class="left"></div>
+		<div class="left">
+		<img src=deb.peep.jpg /></div>
 		<div class="right">
-		<div id="locator">
-			<img src="picts/deb.peep.jpg"><br>
 		</div>
-<h4><em>Facets and considerations</em></h4>
 			
 			<h4>Writing</h4>
-			<p>Copywriter for several magazines and for South Carolina's largest newspaper;
-			freelance writer; public relations writer for UGA's Department of Anthropology</p>
+			<p>Freelance writer; public relations writer for
+			UGA's Department of Anthropology; copywriter for
+			several magazines and for South Carolina's largest newspaper</p>
 			<ul>
 				<li><a href="http://www.georgiaencyclopedia.org/articles/science-medicine/yerkes-national-primate-research-center"><p>Yerkes National Primate Research Center, New Georgia Encyclopedia</p></a></li>
-				<li><a href="http://anthropology.uga.edu/"><p>UGA Department of Anthropology Website, copy and in-depth newsletter articles featuring grant-funded research</p></a></li>>
+				<li><a href="http://anthropology.uga.edu/"><p>UGA Department of 
+				Anthropology Website, copy and in-depth newsletter articles 
+				featuring grant-funded research</p></a></li>
 			</ul>
+			<h4>Promising datasets for investigation</h4>
+			<p><a href="http://www.icpsr.umich.edu/icpsrweb/SAMHDA/series/56">
+			<p>The Federal Substance Abuse and Mental Health Services Adminstration Website 
+			has yearly datasets going back to 1992 for comparison studies on admissions and outcomes</p></a></p>
+			<p><a href="http://www.exploredata.net/Downloads/WHO-Data-Set">
+			<p>World Health Organization set of social, economic, health and political
+			indicators from the WHO and partner organizations</p></a></p>
+			<p><a href="http://www.exploredata.net/Downloads/WHO-Data-Set">
+			<p>Maximal Information-based Nonparametric Exploration Organization's
+			dataset on gene expression in yeast</p></a></p>
 			<h4>Singing and Songwriting</h4>
-			<p>((Upon introducion as writer and singer) "Add mime and you'll have the hat trick." --Jenni Laidman</p>
 			<table style="border-collapse:collapse;">
             <thead>
                 <tr>
-                    <th colspan="2"; style="color:black"; font-family=Helvetica, sans-serif; font-size=14>The Spanish Tonys</th>
+                    <th colspan="2"; style="color:black"; font-family=Helvetica, sans-serif; font-size=14px>The Spanish Tonys</th>
                 </tr>
                 <tr style="border: none;">
                     <th style="padding:5px;"></th>
@@ -59,16 +62,7 @@ A:hover { COLOR: blue; TEXT-DECORATION: none; font-weight: none }>
 				
             </tbody>
         </table>
-		<h4>Promising datasets for investigation</h4>
-			<p><a href="http://www.icpsr.umich.edu/icpsrweb/SAMHDA/series/56">
-			<p>The Federal Substance Abuse and Mental Health Services Adminstration Website 
-			has yearly datasets going back to 1992 for comparison studies on admissions and outcomes</p></a></p>
-			<p><a href="http://www.exploredata.net/Downloads/WHO-Data-Set">
-			<p>World Health Organization set of social, economic, health and political
-			indicators from the WHO and partner organizations</p></a></p>
-			<p><a href="http://www.exploredata.net/Downloads/WHO-Data-Set">
-			<p>Maximal Information-based Nonparametric Exploration Organization's
-			dataset on gene expression in yeast</p></a></p><h4>Education</h4>
+	<h4>Education</h4>
 			<p>B.A. in English, University of South Carolina</p>
 			<ul>
 				<li>President's Scholarship </li>
@@ -76,8 +70,7 @@ A:hover { COLOR: blue; TEXT-DECORATION: none; font-weight: none }>
 			</ul>
 		</div>
 		<div id="footer">
-			<p>340 Carlton Terrace, Athens, Georgia 30606 706.347.4491</p>
+			<p>340 Carlton Terrace, Athens, Georgia 30606 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 706.347.4491</p>
 		</div>
 	</body>
 </html>
->>>>>>> HW 9
